# hyperfast-docker-template

./: .copier-config.yaml  .copier-docker-config.yaml  .copierignore  .envrc  .gitmodules  404.html  CHANGELOG.md  CNAME  Makefile  README.md  copier.yaml  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.copier-template/: .copierignore  CODE_OF_CONDUCT.md.jinja  CONTRIBUTING.md.jinja  Makefile.jinja  README.md  README.md.jinja  `{{ _copier_conf.answers_file }}`.jinja  pyproject.toml.jinja  {% if project_license == 'Apache-2.0' %}LICENSE{% endif %}.jinja  {% if project_license == 'GPLv3' %}LICENSE{% endif %}.jinja  {% if project_license == 'MIT' %}LICENSE{% endif %}.jinja
.copier-template/.docker/: .dockerignore  Dockerfile.app.jinja  Dockerfile.base.jinja  docker-compose.app.yaml  docker-compose.app.yaml.jinja  docker-compose.base.yaml  docker-compose.base.yaml.jinja  docker.app.env  docker.app.env.jinja  docker.base.env.jinja  docker.common.env.jinja  docker.version.jinja  {% if build_images_from_dockerfile %}Dockerfile.`{{ docker_image_variant_name }}`{% endif %}.jinja  {% if build_images_from_dockerfile %}Dockerfile.app{% endif %}.jinja  {% if build_images_from_dockerfile %}Dockerfile.base{% endif %}.jinja  (+4 more)
.copier-template/.github/: dependabot.yaml.jinja
.docker/: Dockerfile  Dockerfile.app  Dockerfile.base  docker-compose-app.yaml  docker-compose.app.yaml  docker-compose.base.yaml  docker-compose.yaml  docker.app.env  docker.base.env  docker.common.env  docker.env  docker.release.env  docker.version
api/: index.html
search/: search_index.json
tmp/: .copier-docker-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
usage/: index.html
(+49 files in other folders)
