[tool.poetry]
name = "hyperfast-docker-template"
version = "0.31.2"
description = "Hyperfast Docker Template is a powerful tool that leverages copier to streamline the creation of new Docker projects. It simplifies and accelerates Docker configurations, fostering a highly efficient and user-friendly development experience."
authors = ["Young Joon Lee <entelecheia@hotmail.com>"]
license = "MIT"
homepage = "https://hyperfast-docker.entelecheia.ai"
repository = "https://github.com/entelecheia/hyperfast-docker-template"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.33.1"

[tool.poe]
include = [".tasks.toml", ".tasks-extra.toml"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = '.docker/docker.version:IMAGE_VERSION="{version}"'
version_source = "tag"
commit_version_number = true                                                             # required for version_source = "tag"
commit_subject = "chore(release): :rocket: {version}"
prerelease_tag = "rc"
major_on_zero = true
tag_commit = true
changelog_file = "CHANGELOG.md"
upload_to_repository = false
upload_to_release = false
hvcs = "github"                                                                          # hosting version control system, gitlab is also supported
build_command = "mkdir -p dist && echo 'No build command configured' > dist/release.txt"
